--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>PrimeZilla Website</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Prime Zilla - Loja Oficial</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Site online com sucesso! 😄</h1>
-    <p>Agora podemos continuar o desenvolvimento!</p>
+
+<header class="topo">
+    <img src="logo.png" class="logo" alt="Prime Zilla Logo">
+    <nav>
+        <a href="index.html">Início</a>
+        <a href="produtos.html">Shopping</a>
+        <a href="fans.html">Clientes Fãs</a>
+        <a href="contato.html">Contato</a>
+    </nav>
+</header>
+
+<section class="destaque">
+    <h1>Bem-vindo à Prime Zilla!</h1>
+    <p>Pods • Eletrônicos • Acessórios</p>
+</section>
+
+<section class="categorias">
+    <div class="card">
+        <h3>Pods</h3>
+        <p>LifePod & Ignite</p>
+        <a class="botao" href="produtos.html">Consultar Produtos</a>
+    </div>
+
+    <div class="card">
+        <h3>Acessórios</h3>
+        <p>Carregadores, cabos e mais</p>
+        <a class="botao" href="produtos.html">Ver Itens</a>
+    </div>
+</section>
+
+<footer>
+    <p>© 2025 Prime Zilla - Todos direitos reservados</p>
+</footer>
+
 </body>
 </html>
