--- a/servicos.html
+++ b/servicos.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Serviços — Prime Zilla</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header class="topo">
+  <img src="logo.png" class="logo" alt="Prime Zilla">
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="produtos.html">Shopping</a>
+    <a href="servicos.html">Serviços</a>
+    <a href="fans.html">Clientes Fãs</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
+
+<section class="destaque">
+  <h1>Nossos Serviços</h1>
+  <p>Assistência técnica, manutenção e orientação especializada.</p>
+</section>
+
+<section class="categorias">
+  <div class="card">
+    <h3>Diagnóstico Rápido</h3>
+    <p>Rápido check-up do aparelho para identificar problemas.</p>
+    <a class="botao" href="contato.html">Solicitar</a>
+  </div>
+
+  <div class="card">
+    <h3>Troca de Tela / Bateria</h3>
+    <p>Peças com garantia e instalação profissional.</p>
+    <a class="botao" href="contato.html">Solicitar</a>
+  </div>
+
+  <div class="card">
+    <h3>Reparos de Placa</h3>
+    <p>Serviço avançado com diagnóstico eletrônico.</p>
+    <a class="botao" href="contato.html">Solicitar</a>
+  </div>
+
+  <div class="card">
+    <h3>Atualização / Software</h3>
+    <p>Restauração, atualização e otimização do sistema.</p>
+    <a class="botao" href="contato.html">Solicitar</a>
+  </div>
+</section>
+
+<footer>
+  <p>© 2025 Prime Zilla — Todos os direitos reservados</p>
+</footer>
+</body>
+</html>
 
