--- a/sabores_lifepod.html
+++ b/sabores_lifepod.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Sabores — LifePod — Prime Zilla</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header class="topo">
+  <img src="logo.png" class="logo" alt="Prime Zilla">
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="produtos.html">Shopping</a>
+    <a href="servicos.html">Serviços</a>
+    <a href="fans.html">Clientes Fãs</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
+
+<section class="destaque">
+  <h1>Sabores — LifePod ECO II 10K</h1>
+  <p>Sabores disponíveis (estoque entre parênteses)</p>
+</section>
+
+<section style="max-width:900px;margin:20px auto;padding:0 16px;">
+  <ul style="list-style:none;padding:0;color:#e6f7ff">
+    <li>Peach Mango — (2)</li>
+    <li>Strawberry Watermelon — (3)</li>
+    <li>Love 66 — (1)</li>
+    <li>Menthol — (5)</li>
+    <li>Polar Ice — (5)</li>
+    <li>Grape Honeydew — (2)</li>
+    <li>Watermelon Ice — (4)</li>
+    <li>Passion Mango — (2)</li>
+    <li>Clear — (2)</li>
+    <li>Blackberry Ice — (1)</li>
+    <li>Mint Waterberry — (2)</li>
+    <li>Blueberry Mint — (3)</li>
+  </ul>
+
+  <p style="margin-top:16px">Para comprar clique em <a href="https://wa.me/5567992018672" style="color:#32dbad">WhatsApp</a> e informe o sabor desejado.</p>
+</section>
+
+<footer>
+  <p>© 2025 Prime Zilla — Todos os direitos reservados</p>
+</footer>
+</body>
+</html>
 
