--- a/valores.html
+++ b/valores.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Valores — Prime Zilla</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header class="topo">
+  <img src="logo.png" class="logo" alt="Prime Zilla">
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="produtos.html">Shopping</a>
+    <a href="servicos.html">Serviços</a>
+    <a href="fans.html">Clientes Fãs</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
+
+<section class="destaque">
+  <h1>Consulte valores</h1>
+  <p>Os valores são atualizados pelo administrador. Para confirmar preço atual, clique no botão abaixo.</p>
+</section>
+
+<section style="text-align:center;padding:20px">
+  <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Quero%20consultar%20os%20valores%20dos%20produtos." target="_blank">Consultar Valores no WhatsApp</a>
+</section>
+
+<footer>
+  <p>© 2025 Prime Zilla — Todos os direitos reservados</p>
+</footer>
+</body>
+</html>
 
