--- a/index.html
+++ b/index.html
@@ -1,45 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Prime Zilla - Loja Oficial</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>PrimeZilla — Eletrônicos & Variedades</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header class="topo">
-    <img src="logo.png" class="logo" alt="Prime Zilla Logo">
-    <nav>
-        <a href="index.html">Início</a>
-        <a href="produtos.html">Shopping</a>
-        <a href="fans.html">Clientes Fãs</a>
-        <a href="contato.html">Contato</a>
-    </nav>
+  <img src="logo.png" class="logo" alt="Prime Zilla Logo">
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="produtos.html">Shopping</a>
+    <a href="fans.html">Clientes Fãs</a>
+    <a href="contato.html">Contato</a>
+  </nav>
 </header>
 
 <section class="destaque">
-    <h1>Bem-vindo à Prime Zilla!</h1>
-    <p>Pods • Eletrônicos • Acessórios</p>
+  <h1>PrimeZilla — Eletrônicos & Variedades</h1>
+  <p>Pods, acessórios e entregas rápidas em Jardim & Guia Lopes</p>
+  <div style="margin-top:18px">
+    <a class="botao" href="produtos.html">Ver Produtos</a>
+  </div>
 </section>
 
-<section class="categorias">
+<section style="padding:30px 16px;max-width:1100px;margin:0 auto">
+  <h2 style="color:#32dbad;text-align:center;margin-bottom:18px">Destaques</h2>
+  <div class="categorias">
     <div class="card">
-        <h3>Pods</h3>
-        <p>LifePod & Ignite</p>
-        <a class="botao" href="produtos.html">Consultar Produtos</a>
+      <h3>LifePod ECO II 10K</h3>
+      <p>Refil + Capa</p>
+      <p style="font-weight:700;color:#e6f7ff">R$ 130,00</p>
+      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
+        <a class="botao" href="sabores_lifepod.html">Ver Sabores</a>
+        <a class="botao" href="valores.html">Consultar Valores</a>
+      </div>
     </div>
 
     <div class="card">
-        <h3>Acessórios</h3>
-        <p>Carregadores, cabos e mais</p>
-        <a class="botao" href="produtos.html">Ver Itens</a>
+      <h3>Ignite V250</h3>
+      <p>25.000 puffs</p>
+      <p style="font-weight:700;color:#e6f7ff">R$ 120,00</p>
+      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
+        <a class="botao" href="produtos.html">Ver</a>
+        <a class="botao" href="valores.html">Consultar Valores</a>
+      </div>
     </div>
+
+    <div class="card">
+      <h3>Ignite V80</h3>
+      <p>8.000 puffs</p>
+      <p style="font-weight:700;color:#e6f7ff">R$ 84,00</p>
+      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
+        <a class="botao" href="produtos.html">Ver</a>
+        <a class="botao" href="valores.html">Consultar Valores</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <h3>Ignite P100</h3>
+      <p>10.000 puffs</p>
+      <p style="font-weight:700;color:#e6f7ff">R$ 105,00</p>
+      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
+        <a class="botao" href="produtos.html">Ver</a>
+        <a class="botao" href="valores.html">Consultar Valores</a>
+      </div>
+    </div>
+  </div>
 </section>
 
 <footer>
-    <p>© 2025 Prime Zilla - Todos direitos reservados</p>
+  <p>© 2025 PrimeZilla — Eletrônicos & Variedades</p>
 </footer>
 
 </body>
