--- a/produtos.html
+++ b/produtos.html
@@ -1,75 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Produtos - Prime Zilla</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Produtos — PrimeZilla</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
 <header class="topo">
-    <img src="logo.png" class="logo" alt="Prime Zilla Logo">
-    <nav>
-        <a href="index.html">Início</a>
-        <a href="produtos.html">Shopping</a>
-        <a href="fans.html">Clientes Fãs</a>
-        <a href="contato.html">Contato</a>
-    </nav>
+  <img src="logo.png" class="logo" alt="Prime Zilla Logo">
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="produtos.html">Shopping</a>
+    <a href="fans.html">Clientes Fãs</a>
+    <a href="contato.html">Contato</a>
+  </nav>
 </header>
 
 <section class="destaque">
-    <h1>Produtos Disponíveis</h1>
-    <p>Confira nossos pods e acessórios</p>
+  <h1>Produtos Disponíveis</h1>
+  <p>Confira nossos pods e acessórios</p>
 </section>
 
-<section class="categorias">
+<section style="max-width:1100px;margin:20px auto;padding:0 16px;">
+  <h2 style="color:#32dbad;margin-bottom:14px">Pods</h2>
 
-    <!-- PODS LIFE POD -->
+  <div class="categorias">
     <div class="card">
-        <h3>LifePod 8K</h3>
-        <p>Consultar sabores disponíveis</p>
+      <h3>LifePod ECO II — 10K</h3>
+      <p>Refil + Capa</p>
+      <p style="font-weight:700;color:#e6f7ff">R$ 130,00</p>
+      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
         <a class="botao" href="sabores_lifepod.html">Consultar Sabores</a>
         <a class="botao" href="valores.html">Consultar Valores</a>
+        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Quero%20fazer%20pedido%20do%20LifePod%2010K" target="_blank">Fazer pedido</a>
+      </div>
     </div>
 
     <div class="card">
-        <h3>LifePod 10K</h3>
-        <a class="botao" href="sabores_lifepod.html">Consultar Sabores</a>
+      <h3>Ignite V250 — 25K</h3>
+      <p>Disposable</p>
+      <p style="font-weight:700;color:#e6f7ff">R$ 120,00</p>
+      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
         <a class="botao" href="valores.html">Consultar Valores</a>
+        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Quero%20fazer%20pedido%20do%20Ignite%20V250" target="_blank">Fazer pedido</a>
+      </div>
     </div>
 
     <div class="card">
-        <h3>LifePod 150K</h3>
-        <a class="botao" href="sabores_lifepod.html">Consultar Sabores</a>
+      <h3>Ignite V80 — 8K</h3>
+      <p>Disposable</p>
+      <p style="font-weight:700;color:#e6f7ff">R$ 84,00</p>
+      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
         <a class="botao" href="valores.html">Consultar Valores</a>
-    </div>
-
-
-    <!-- PODS IGNITE -->
-    <div class="card">
-        <h3>Ignite 8K</h3>
-        <a class="botao" href="sabores_ignite.html">Consultar Sabores</a>
-        <a class="botao" href="valores.html">Consultar Valores</a>
+        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Quero%20fazer%20pedido%20do%20Ignite%20V80" target="_blank">Fazer pedido</a>
+      </div>
     </div>
 
     <div class="card">
-        <h3>Ignite 10K</h3>
-        <a class="botao" href="sabores_ignite.html">Consultar Sabores</a>
+      <h3>Ignite P100 — 10K</h3>
+      <p>Rechargeable pod</p>
+      <p style="font-weight:700;color:#e6f7ff">R$ 105,00</p>
+      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
         <a class="botao" href="valores.html">Consultar Valores</a>
+        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Quero%20fazer%20pedido%20do%20Ignite%20P100" target="_blank">Fazer pedido</a>
+      </div>
     </div>
-
-    <div class="card">
-        <h3>Ignite 150K</h3>
-        <a class="botao" href="sabores_ignite.html">Consultar Sabores</a>
-        <a class="botao" href="valores.html">Consultar Valores</a>
-    </div>
+  </div>
 
 </section>
 
 <footer>
-    <p>© 2025 Prime Zilla - Todos direitos reservados</p>
+  <p>© 2025 PrimeZilla — Todos os direitos reservados</p>
 </footer>
 
 </body>
