--- a/sabores_lifepod.html
+++ b/sabores_lifepod.html
@@ -3,16 +3,15 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Sabores — LifePod — Prime Zilla</title>
+<title>Sabores — LifePod — PrimeZilla</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="topo">
-  <img src="logo.png" class="logo" alt="Prime Zilla">
+  <img src="logo.png" class="logo" alt="Prime Zilla Logo">
   <nav>
     <a href="index.html">Início</a>
     <a href="produtos.html">Shopping</a>
-    <a href="servicos.html">Serviços</a>
     <a href="fans.html">Clientes Fãs</a>
     <a href="contato.html">Contato</a>
   </nav>
@@ -43,8 +42,7 @@
 </section>
 
 <footer>
-  <p>© 2025 Prime Zilla — Todos os direitos reservados</p>
+  <p>© 2025 PrimeZilla — Todos os direitos reservados</p>
 </footer>
 </body>
 </html>
-
