Update title and footer content in valores.html

--- a/valores.html
+++ b/valores.html
@@ -3,23 +3,22 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Valores — Prime Zilla</title>
+<title>Valores — PrimeZilla</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="topo">
-  <img src="logo.png" class="logo" alt="Prime Zilla">
+  <img src="logo.png" class="logo" alt="Prime Zilla Logo">
   <nav>
     <a href="index.html">Início</a>
     <a href="produtos.html">Shopping</a>
-    <a href="servicos.html">Serviços</a>
     <a href="fans.html">Clientes Fãs</a>
     <a href="contato.html">Contato</a>
   </nav>
 </header>
 
 <section class="destaque">
-  <h1>Consulte valores</h1>
+  <h1>Consultar Valores</h1>
   <p>Os valores são atualizados pelo administrador. Para confirmar preço atual, clique no botão abaixo.</p>
 </section>
 
@@ -28,8 +27,7 @@
 </section>
 
 <footer>
-  <p>© 2025 Prime Zilla — Todos os direitos reservados</p>
+  <p>© 2025 PrimeZilla — Todos os direitos reservados a @jhon_lorran_ criador do site</p>
 </footer>
 </body>
 </html>
-
