Fix title and alt text in contato.html

--- a/contato.html
+++ b/contato.html
@@ -3,16 +3,15 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Contato — Prime Zilla</title>
+<title>Contato — PrimeZilla</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="topo">
-  <img src="logo.png" class="logo" alt="Prime Zilla">
+  <img src="logo.png" class="logo" alt="Prime Zilla Logo">
   <nav>
     <a href="index.html">Início</a>
     <a href="produtos.html">Shopping</a>
-    <a href="servicos.html">Serviços</a>
     <a href="fans.html">Clientes Fãs</a>
     <a href="contato.html">Contato</a>
   </nav>
@@ -38,4 +37,3 @@
 </footer>
 </body>
 </html>
-
