Update title and alt text in fans.html

--- a/fans.html
+++ b/fans.html
@@ -3,16 +3,15 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Clientes Fãs — Prime Zilla</title>
+<title>Clientes Fãs — PrimeZilla</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="topo">
-  <img src="logo.png" class="logo" alt="Prime Zilla">
+  <img src="logo.png" class="logo" alt="Prime Zilla Logo">
   <nav>
     <a href="index.html">Início</a>
     <a href="produtos.html">Shopping</a>
-    <a href="servicos.html">Serviços</a>
     <a href="fans.html">Clientes Fãs</a>
     <a href="contato.html">Contato</a>
   </nav>
@@ -20,7 +19,7 @@
 
 <section class="destaque">
   <h1>Clientes Fãs</h1>
-  <p>Veja depoimentos e vantagens do clube de fãs Prime Zilla.</p>
+  <p>Depoimentos e vantagens</p>
 </section>
 
 <section class="categorias" style="justify-content:center;">
@@ -45,4 +44,3 @@
 </footer>
 </body>
 </html>
-
