Update product details and styling in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="topo">
-  <img src="logo.png" class="logo" alt="Prime Zilla Logo">
+  <img src="logo.png" class="logo" alt="PrimeZilla">
   <nav>
     <a href="index.html">Início</a>
     <a href="produtos.html">Shopping</a>
@@ -20,59 +20,66 @@
 
 <section class="destaque">
   <h1>PrimeZilla — Eletrônicos & Variedades</h1>
-  <p>Pods, acessórios e entregas rápidas em Jardim & Guia Lopes</p>
+  <p>Produtos selecionados com entrega rápida em Jardim & Guia Lopes</p>
   <div style="margin-top:18px">
     <a class="botao" href="produtos.html">Ver Produtos</a>
   </div>
 </section>
 
-<section style="padding:30px 16px;max-width:1100px;margin:0 auto">
-  <h2 style="color:#32dbad;text-align:center;margin-bottom:18px">Destaques</h2>
+<section style="padding:30px 16px;max-width:1200px;margin:0 auto">
+  <h2 style="color:#0A84FF;text-align:center;margin-bottom:12px">Destaques</h2>
+
   <div class="categorias">
+
+    <!-- Produto 1 -->
     <div class="card">
-      <h3>LifePod ECO II 10K</h3>
-      <p>Refil + Capa</p>
-      <p style="font-weight:700;color:#e6f7ff">R$ 130,00</p>
+      <img src="prod_1.png" alt="Cabo 60W" style="width:100%;height:160px;object-fit:cover;border-radius:6px">
+      <h3>Cabo 60W Turbo USB-C - 1m</h3>
+      <p style="font-weight:700;color:#111">R$ 15,90</p>
       <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="sabores_lifepod.html">Ver Sabores</a>
-        <a class="botao" href="valores.html">Consultar Valores</a>
+        <a class="botao" href="produtos.html#acessorios">Ver</a>
+        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Cabo%2060W%20Turbo%20USB-C%201m%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2015,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
       </div>
     </div>
 
+    <!-- Produto 2 -->
     <div class="card">
-      <h3>Ignite V250</h3>
-      <p>25.000 puffs</p>
-      <p style="font-weight:700;color:#e6f7ff">R$ 120,00</p>
+      <img src="prod_2.png" alt="Kit Carregador" style="width:100%;height:160px;object-fit:cover;border-radius:6px">
+      <h3>Kit Carregador Mini Pro Max 20W</h3>
+      <p style="font-weight:700;color:#111">R$ 51,90</p>
       <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="produtos.html">Ver</a>
-        <a class="botao" href="valores.html">Consultar Valores</a>
+        <a class="botao" href="produtos.html#acessorios">Ver</a>
+        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Kit%20Carregador%20Mini%20Pro%20Max%2020W%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2051,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
       </div>
     </div>
 
+    <!-- Produto 3 -->
     <div class="card">
-      <h3>Ignite V80</h3>
-      <p>8.000 puffs</p>
-      <p style="font-weight:700;color:#e6f7ff">R$ 84,00</p>
+      <img src="prod_3.png" alt="Cabo Lightning" style="width:100%;height:160px;object-fit:cover;border-radius:6px">
+      <h3>Cabo 20W Turbo Lightning / USB-C</h3>
+      <p style="font-weight:700;color:#111">R$ 12,90</p>
       <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="produtos.html">Ver</a>
-        <a class="botao" href="valores.html">Consultar Valores</a>
+        <a class="botao" href="produtos.html#acessorios">Ver</a>
+        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Cabo%2020W%20Turbo%20Lightning%20%2F%20USB-C%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2012,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
       </div>
     </div>
 
+    <!-- Produto 4 -->
     <div class="card">
-      <h3>Ignite P100</h3>
-      <p>10.000 puffs</p>
-      <p style="font-weight:700;color:#e6f7ff">R$ 105,00</p>
+      <img src="prod_4.png" alt="Garrafa Anime" style="width:100%;height:160px;object-fit:cover;border-radius:6px">
+      <h3>Garrafa de Alumínio Anime c/ Chaveiro 500ml</h3>
+      <p style="font-weight:700;color:#111">R$ 31,90</p>
       <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="produtos.html">Ver</a>
-        <a class="botao" href="valores.html">Consultar Valores</a>
+        <a class="botao" href="produtos.html#outros">Ver</a>
+        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Garrafa%20de%20Alum%C3%ADnio%20500ml%20Anime%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2031,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
       </div>
     </div>
+
   </div>
 </section>
 
 <footer>
-  <p>© 2025 PrimeZilla — Eletrônicos & Variedades</p>
+  <p style="text-align:center;padding:18px;background:#f0f0f0;color:#444;margin-top:30px">© 2025 PrimeZilla — Eletrônicos & Variedades</p>
 </footer>
 
 </body>
