--- a/produtos.html
+++ b/produtos.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Produtos — PrimeZilla</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="topo">
-  <img src="logo.png" class="logo" alt="Prime Zilla Logo">
+  <img src="logo.png" class="logo" alt="PrimeZilla">
   <nav>
     <a href="index.html">Início</a>
     <a href="produtos.html">Shopping</a>
@@ -17,62 +17,53 @@
   </nav>
 </header>
 
-<section class="destaque">
-  <h1>Produtos Disponíveis</h1>
-  <p>Confira nossos pods e acessórios</p>
-</section>
+<section style="padding:18px;max-width:1100px;margin:0 auto">
+  <h2 style="color:var(--primary)">Pods / Descartáveis</h2>
+  <div class="categorias" id="pods">
+    <!-- (Nenhum dos 4 é pod; mantemos espaço para futuros) -->
+    <p style="color:var(--muted)">Sem itens nesta categoria por enquanto.</p>
+  </div>
 
-<section style="max-width:1100px;margin:20px auto;padding:0 16px;">
-  <h2 style="color:#32dbad;margin-bottom:14px">Pods</h2>
-
+  <h2 style="color:var(--primary);margin-top:18px" id="acessorios">Acessórios</h2>
   <div class="categorias">
+    <!-- prod_1 / prod_2 / prod_3 -->
     <div class="card">
-      <h3>LifePod ECO II — 10K</h3>
-      <p>Refil + Capa</p>
-      <p style="font-weight:700;color:#e6f7ff">R$ 130,00</p>
-      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="sabores_lifepod.html">Consultar Sabores</a>
-        <a class="botao" href="valores.html">Consultar Valores</a>
-        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Quero%20fazer%20pedido%20do%20LifePod%2010K" target="_blank">Fazer pedido</a>
-      </div>
+      <img src="prod_1.png" style="width:100%;height:140px;object-fit:cover;border-radius:6px">
+      <h3>Cabo 60W Turbo USB-C</h3>
+      <p>1 metro</p>
+      <p style="font-weight:700">R$ 15,90</p>
+      <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Cabo%2060W%20Turbo%20USB-C%201m%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2015,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
     </div>
 
     <div class="card">
-      <h3>Ignite V250 — 25K</h3>
-      <p>Disposable</p>
-      <p style="font-weight:700;color:#e6f7ff">R$ 120,00</p>
-      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="valores.html">Consultar Valores</a>
-        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Quero%20fazer%20pedido%20do%20Ignite%20V250" target="_blank">Fazer pedido</a>
-      </div>
+      <img src="prod_2.png" style="width:100%;height:140px;object-fit:cover;border-radius:6px">
+      <h3>Kit Carregador 20W + Cabo</h3>
+      <p>USB-C / Lightning</p>
+      <p style="font-weight:700">R$ 51,90</p>
+      <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Kit%20Carregador%20Mini%20Pro%20Max%2020W%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2051,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
     </div>
 
     <div class="card">
-      <h3>Ignite V80 — 8K</h3>
-      <p>Disposable</p>
-      <p style="font-weight:700;color:#e6f7ff">R$ 84,00</p>
-      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="valores.html">Consultar Valores</a>
-        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Quero%20fazer%20pedido%20do%20Ignite%20V80" target="_blank">Fazer pedido</a>
-      </div>
-    </div>
-
-    <div class="card">
-      <h3>Ignite P100 — 10K</h3>
-      <p>Rechargeable pod</p>
-      <p style="font-weight:700;color:#e6f7ff">R$ 105,00</p>
-      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="valores.html">Consultar Valores</a>
-        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Quero%20fazer%20pedido%20do%20Ignite%20P100" target="_blank">Fazer pedido</a>
-      </div>
+      <img src="prod_3.png" style="width:100%;height:140px;object-fit:cover;border-radius:6px">
+      <h3>Cabo Lightning / USB-C 20W</h3>
+      <p>1 metro</p>
+      <p style="font-weight:700">R$ 12,90</p>
+      <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Cabo%2020W%20Turbo%20Lightning%20%2F%20USB-C%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2012,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
     </div>
   </div>
 
+  <h2 style="color:var(--primary);margin-top:18px" id="outros">Outros</h2>
+  <div class="categorias">
+    <div class="card">
+      <img src="prod_4.png" style="width:100%;height:140px;object-fit:cover;border-radius:6px">
+      <h3>Garrafa de Alumínio Anime 500ml</h3>
+      <p>Com chaveiro</p>
+      <p style="font-weight:700">R$ 31,90</p>
+      <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Garrafa%20de%20Alum%C3%ADnio%20500ml%20Anime%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2031,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
+    </div>
+  </div>
 </section>
 
-<footer>
-  <p>© 2025 PrimeZilla — Todos os direitos reservados</p>
-</footer>
-
+<footer style="padding:18px;text-align:center;color:var(--muted);">© 2025 PrimeZilla</footer>
 </body>
 </html>
