Refactor sabores_lifepod.html structure and content

--- a/sabores_lifepod.html
+++ b/sabores_lifepod.html
@@ -1,29 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Sabores — LifePod — PrimeZilla</title>
-<link rel="stylesheet" href="style.css">
-</head>
+<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Sabores — PrimeZilla</title><link rel="stylesheet" href="style.css"></head>
 <body>
-<header class="topo">
-  <img src="logo.png" class="logo" alt="Prime Zilla Logo">
-  <nav>
-    <a href="index.html">Início</a>
-    <a href="produtos.html">Shopping</a>
-    <a href="fans.html">Clientes Fãs</a>
-    <a href="contato.html">Contato</a>
-  </nav>
-</header>
-
-<section class="destaque">
-  <h1>Sabores — LifePod ECO II 10K</h1>
-  <p>Sabores disponíveis (estoque entre parênteses)</p>
-</section>
-
-<section style="max-width:900px;margin:20px auto;padding:0 16px;">
-  <ul style="list-style:none;padding:0;color:#e6f7ff">
+<header class="topo"><img src="logo.png" class="logo" alt="PrimeZilla"><nav><a href="index.html">Início</a><a href="produtos.html">Shopping</a><a href="contato.html">Contato</a></nav></header>
+<section class="destaque"><h1>Sabores — LifePod (Exemplo)</h1><p>Consulte disponibilidade</p></section>
+<section style="max-width:900px;margin:18px auto;padding:0 16px;color:#333">
+  <ul style="list-style:none;padding:0;color:var(--text)">
     <li>Peach Mango — (2)</li>
     <li>Strawberry Watermelon — (3)</li>
     <li>Love 66 — (1)</li>
@@ -37,12 +19,8 @@
     <li>Mint Waterberry — (2)</li>
     <li>Blueberry Mint — (3)</li>
   </ul>
-
-  <p style="margin-top:16px">Para comprar clique em <a href="https://wa.me/5567992018672" style="color:#32dbad">WhatsApp</a> e informe o sabor desejado.</p>
+  <p style="margin-top:12px">Para comprar clique <a class="botao" href="https://wa.me/5567992018672" target="_blank">WhatsApp</a></p>
 </section>
-
-<footer>
-  <p>© 2025 PrimeZilla — Todos os direitos reservados</p>
-</footer>
+<footer style="padding:18px;text-align:center;color:var(--muted)">© 2025 PrimeZilla</footer>
 </body>
 </html>
