--- a/index.html
+++ b/index.html
@@ -1,86 +1,116 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PrimeZilla — Eletrônicos & Variedades</title>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>PrimeZilla — Loja</title>
 <link rel="stylesheet" href="style.css">
+<!-- Firebase SDKs -->
+<script type="module">
+  // WARNING: insira seu firebaseConfig abaixo (eu explico onde obter)
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+  import { getFirestore, collection, query, where, onSnapshot, orderBy } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+
+  // --- substitua com seu config do Firebase ---
+  const firebaseConfig = {
+    apiKey: "SUA_API_KEY",
+    authDomain: "SEU_AUTH_DOMAIN",
+    projectId: "SEU_PROJECT_ID",
+    storageBucket: "SEU_STORAGE_BUCKET",
+    messagingSenderId: "SEU_SENDER_ID",
+    appId: "SEU_APP_ID"
+  };
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  // após DOM carregar
+  document.addEventListener('DOMContentLoaded', ()=> {
+    const container = document.getElementById('productsGrid');
+    // consulta: só produtos ativos, ordena por createdAt
+    const q = query(collection(db,'products'), orderBy('createdAt','desc'));
+    onSnapshot(q, snapshot => {
+      container.innerHTML = '';
+      snapshot.forEach(doc => {
+        const p = doc.data();
+        if(!p.active) return;
+        const priceText = p.price ? `R$ ${Number(p.price).toFixed(2)}` : 'Consultar valores';
+        const img = p.imageUrl || 'placeholder.png';
+        // criar card
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.innerHTML = `
+          <img src="${img}" alt="${escapeHtml(p.name)}">
+          <h3>${escapeHtml(p.name)}</h3>
+          <p class="price">${priceText}</p>
+          <div class="actions">
+            <select class="qty">
+              <option value="1">1</option><option value="2">2</option><option value="3">3</option>
+            </select>
+            <select class="variant">${(p.options||[]).map(o=>`<option value="${encodeURIComponent(o)}">${escapeHtml(o)}</option>`).join('')}</select>
+            <select class="payment">
+              <option value="PIX">PIX</option>
+              <option value="Dinheiro">Dinheiro</option>
+              <option value="Cartão">Cartão</option>
+            </select>
+            <button class="whatsappBtn">Fazer pedido</button>
+          </div>
+        `;
+        // evento do botão
+        card.querySelector('.whatsappBtn').addEventListener('click', ()=>{
+          const qtd = card.querySelector('.qty').value;
+          const variant = decodeURIComponent(card.querySelector('.variant').value || '-');
+          const payment = card.querySelector('.payment').value;
+          // mensagem conforme regra: se type == "pod" use "Cor/Sabor", senão "Cor/Sabor" assumimos cor
+          const variantLabel = (p.type === 'pod') ? 'Cor/Sabor' : 'Cor/Sabor';
+          const valorText = p.price ? `R$ ${Number(p.price).toFixed(2)}` : 'Consultar valores';
+          const text = encodeURIComponent(
+            `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${variantLabel}: ${variant}\nValor: ${valorText}\nForma de Pagamento: ${payment}`
+          );
+          const phone = '5567992018672'; // seu número sem + , sem espaços
+          const url = `https://wa.me/${phone}?text=${text}`;
+          window.open(url,'_blank');
+        });
+
+        container.appendChild(card);
+      });
+    });
+  });
+
+  // escape simples
+  function escapeHtml(str){ return String(str||'').replace(/[&<>"']/g, m=> ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])); }
+</script>
 </head>
 <body>
-
 <header class="topo">
   <img src="logo.png" class="logo" alt="PrimeZilla">
-  <nav>
-    <a href="index.html">Início</a>
-    <a href="produtos.html">Shopping</a>
-    <a href="fans.html">Clientes Fãs</a>
-    <a href="contato.html">Contato</a>
-  </nav>
+  <nav><a href="index.html">Início</a><a href="produtos.html">Produtos</a><a href="contato.html">Contato</a></nav>
 </header>
 
-<section class="destaque">
-  <h1>PrimeZilla — Eletrônicos & Variedades</h1>
-  <p>Produtos selecionados com entrega rápida em Jardim & Guia Lopes</p>
-  <div style="margin-top:18px">
-    <a class="botao" href="produtos.html">Ver Produtos</a>
-  </div>
-</section>
+<main>
+  <section class="hero">
+    <h1>PrimeZilla</h1>
+    <p>Produtos selecionados. Frete grátis para Jardim & Guia Lopes.</p>
+  </section>
 
-<section style="padding:30px 16px;max-width:1200px;margin:0 auto">
-  <h2 style="color:#0A84FF;text-align:center;margin-bottom:12px">Destaques</h2>
+  <section class="catalog">
+    <div id="productsGrid" class="grid"></div>
+  </section>
+</main>
 
-  <div class="categorias">
+<footer>© 2025 PrimeZilla</footer>
 
-    <!-- Produto 1 -->
-    <div class="card">
-      <img src="prod_1.png" alt="Cabo 60W" style="width:100%;height:160px;object-fit:cover;border-radius:6px">
-      <h3>Cabo 60W Turbo USB-C - 1m</h3>
-      <p style="font-weight:700;color:#111">R$ 15,90</p>
-      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="produtos.html#acessorios">Ver</a>
-        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Cabo%2060W%20Turbo%20USB-C%201m%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2015,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
-      </div>
-    </div>
-
-    <!-- Produto 2 -->
-    <div class="card">
-      <img src="prod_2.png" alt="Kit Carregador" style="width:100%;height:160px;object-fit:cover;border-radius:6px">
-      <h3>Kit Carregador Mini Pro Max 20W</h3>
-      <p style="font-weight:700;color:#111">R$ 51,90</p>
-      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="produtos.html#acessorios">Ver</a>
-        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Kit%20Carregador%20Mini%20Pro%20Max%2020W%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2051,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
-      </div>
-    </div>
-
-    <!-- Produto 3 -->
-    <div class="card">
-      <img src="prod_3.png" alt="Cabo Lightning" style="width:100%;height:160px;object-fit:cover;border-radius:6px">
-      <h3>Cabo 20W Turbo Lightning / USB-C</h3>
-      <p style="font-weight:700;color:#111">R$ 12,90</p>
-      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="produtos.html#acessorios">Ver</a>
-        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Cabo%2020W%20Turbo%20Lightning%20%2F%20USB-C%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2012,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
-      </div>
-    </div>
-
-    <!-- Produto 4 -->
-    <div class="card">
-      <img src="prod_4.png" alt="Garrafa Anime" style="width:100%;height:160px;object-fit:cover;border-radius:6px">
-      <h3>Garrafa de Alumínio Anime c/ Chaveiro 500ml</h3>
-      <p style="font-weight:700;color:#111">R$ 31,90</p>
-      <div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
-        <a class="botao" href="produtos.html#outros">Ver</a>
-        <a class="botao" href="https://wa.me/5567992018672?text=Ol%C3%A1!%20Tenho%20interesse%20no%20produto:%20Garrafa%20de%20Alum%C3%ADnio%20500ml%20Anime%0AQuantidade:%201%0ACor%2FSabor:%20-%0AValor:%20R$%2031,90%0AForma%20de%20Pagamento:%20PIX" target="_blank">Comprar via WhatsApp</a>
-      </div>
-    </div>
-
-  </div>
-</section>
-
-<footer>
-  <p style="text-align:center;padding:18px;background:#f0f0f0;color:#444;margin-top:30px">© 2025 PrimeZilla — Eletrônicos & Variedades</p>
-</footer>
-
+<style>
+/* CSS compacto: estilize depois para combinar com referência */
+body{font-family:Inter,Arial;margin:0;background:#fff;color:#111}
+.topo{display:flex;align-items:center;justify-content:space-between;padding:12px 20px;border-bottom:1px solid #eee}
+.logo{height:56px}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;padding:20px}
+.card{background:#fff;border:1px solid #f1f5f9;padding:12px;border-radius:10px;text-align:center;box-shadow:0 6px 20px rgba(10,132,255,0.03)}
+.card img{width:100%;height:160px;object-fit:cover;border-radius:6px}
+.price{font-weight:700;color:#0A84FF}
+.actions{display:flex;flex-direction:column;gap:8px;margin-top:8px}
+.actions select{padding:8px;border-radius:6px;border:1px solid #e6eefb}
+.actions button{background:#0A84FF;color:#fff;border:none;padding:10px;border-radius:8px;cursor:pointer}
+</style>
 </body>
 </html>
